--- a/fpPrototype.html
+++ b/fpPrototype.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" href="./FP0.css" />
+    <link rel="stylesheet" href="./fpPrototype.css" />
   </head>
   <body>
     <div class="FP0-container">
